--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_secure_storage: ^6.0.0
   flutter_webview_plugin: ^0.4.0
 
 dev_dependencies:
